Fix issue with headings on mobile

--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ b {
 
 h1, h2, h3 {
   font-weight: bold;
+  text-align: left;
 }
 
 h1 {
